--- a/ProjectFiles/Packages/manifest.json
+++ b/ProjectFiles/Packages/manifest.json
@@ -8,6 +8,7 @@
     "com.unity.test-framework": "1.0.13",
     "com.unity.textmeshpro": "2.0.1",
     "com.unity.timeline": "1.1.0",
+    "com.unity.transport": "file:/../multiplayer/com.unity.transport",
     "com.unity.ugui": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
