--- a/ProjectFiles/Packages/manifest.json
+++ b/ProjectFiles/Packages/manifest.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "com.unity.burst": "1.1.2",
     "com.unity.collab-proxy": "1.2.16",
     "com.unity.ext.nunit": "1.0.0",
     "com.unity.ide.rider": "1.1.0",
@@ -8,7 +9,7 @@
     "com.unity.test-framework": "1.0.13",
     "com.unity.textmeshpro": "2.0.1",
     "com.unity.timeline": "1.1.0",
-    "com.unity.transport": "file:/../multiplayer/com.unity.transport",
+    "com.unity.transport": "file:../../multiplayer/com.unity.transport",
     "com.unity.ugui": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
