--- a/ProjectFiles/Packages/manifest.json
+++ b/ProjectFiles/Packages/manifest.json
@@ -7,6 +7,8 @@
     "com.unity.ide.vscode": "1.1.3",
     "com.unity.polybrush": "1.0.1",
     "com.unity.probuilder": "4.1.2",
+    "com.unity.render-pipelines.lightweight": "7.1.8",
+    "com.unity.shadergraph": "7.1.8",
     "com.unity.test-framework": "1.1.3",
     "com.unity.textmeshpro": "2.0.1",
     "com.unity.timeline": "1.2.6",
