--- a/ProjectFiles/Packages/manifest.json
+++ b/ProjectFiles/Packages/manifest.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "com.unity.burst": "1.2.3",
     "com.unity.collab-proxy": "1.2.16",
+    "com.unity.collections": "0.5.2-preview.8",
     "com.unity.ext.nunit": "1.0.0",
     "com.unity.ide.rider": "1.1.4",
     "com.unity.ide.vscode": "1.1.4",
@@ -9,12 +10,15 @@
     "com.unity.postprocessing": "2.3.0",
     "com.unity.probuilder": "4.2.3",
     "com.unity.render-pipelines.lightweight": "7.1.8",
+    "com.unity.settings-manager": "1.0.1",
     "com.unity.shadergraph": "7.1.8",
     "com.unity.test-framework": "1.1.11",
+    "com.unity.test-framework.performance": "2.0.8-preview",
     "com.unity.textmeshpro": "2.0.1",
     "com.unity.timeline": "1.2.12",
     "com.unity.transport": "0.2.3-preview.0",
     "com.unity.ugui": "1.0.0",
+    "com.unity.xr.management": "3.0.6",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
