Fixes namespace errors with tests

--- a/ProjectFiles/Assets/Tests/Tests.asmdef
+++ b/ProjectFiles/Assets/Tests/Tests.asmdef
@@ -3,8 +3,7 @@
     "references": [
         "UnityEngine.TestRunner",
         "UnityEditor.TestRunner",
-        "GameAssembly",
-        "Unity.Networking.Transport"
+        "GameAssembly"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
